# Changelog

## Version 5.4.0

* Adding #389 unlock GPU encoders by checking for supported codec (thanks to F.O.R.A.R.T.)
* Adding #430 Minimise to tray (thanks to ProFire)
* Changing rigaya encoders end time would use --trim instead of --seekto
* Changing #450 -vsync to -fps_mode as -vsync is deprecated (thanks to GT500org)
* Fixing #441 outdated SVT-AV1 Encoding Guide link (thanks to Yuzbashi)
* Fixing #455 source FPS was not applied to rigaya encoders (thanks to F.O.R.A.R.T.)
* Removing Windows toast notification due to prone to errors and incompatibility with tray minimize

## Version 5.3.0

* Adding profile select in Load Directory window
* Adding `avis` and `avifs` extensions for AV1 (thanks to u/zimmwisdom)
* Fixing #439 QSVEnc QP mode select did not work in AVC / HEVC (thanks to sun6560032)
* Fixing current profile window would not show

## Version 5.2.3

* Fixing #433 queue_extras emptied on loading queue (thanks to Maddie Davis)

## Version 5.2.2

* Fixing #431 Missing ubuntu 20 builds (thanks to techore)
* Fixing file extension drop down would not always set correct on encoder change (thanks to GT500org)
* Fixing missing translations for VVC
* Fixing VVC was adding extra params it did not support
* Fixing trying to restore a video from the queue that was using an encoder that no longer exists

## Version 5.2.1

* Fixing #426 Version 5.2 does not run on fresh install (thanks to Bandid0)
* Fixing #427 Error loading videos that do not have tags (thanks to Maddie Davis)

## Version 5.2.0

* Adding #100 Output format selection (thanks to me)
* Adding #227 load directory of videos support (thanks to Chris / moonwhaler and a lot of others)
* Adding #233 Versatile Video Coding (aka x266) support (thanks to F.O.R.A.R.T.)
* Adding #200 #320 #373 UI scaling (thanks to tyeeman, wynterca and reza)
* Adding #367 safer font defaults (thanks to Archer Allstars)
* Adding #242 and #400 resolution saves to the profile (thanks to x9sim9)