@@ -8485,3 +8485,5 @@ Minimize to Tray:
   eng: Minimize to Tray
 Device:
   eng: Device
+Don't Select Any Audio:
+  eng: Don't Select Any Audio
